--- a/templates/contacts/termsofuse.html
+++ b/templates/contacts/termsofuse.html
@@ -3,12 +3,16 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h3 class='text-center m-2'>УСЛОВИЯ ИСПОЛЬЗОВАНИЯ СЕРВИСА</h3>
+            <h3 class='text-center m-2'>УСЛОВИЯ ИСПОЛЬЗОВАНИЯ СЕРВИСА (ред 1 от 30.08.2022).</h3><br>
 
             <h5>1. Общие положения</h5>
             <p>
                 Ruversity.com представляет собой ресурс, где физические и юридические лица, здесь и далее именуемые как Преподаватель или Преподаватели, размещают обучающие видео материалы, лекции, тесты, здесь и далее именуемые как Обучающие материалы.
                 Дргие физические и юридические лица, здесь и далее именуемые как Слушатель или Слушатели, могут использовать размещенные на данном ресурсе Обучающие материалы с целью обучения, повышения квалификации, личностного роста и сертификации.
+            </p>
+            <p>
+                Под Пользователями в настоящи Условиях понимаются любые физические и юридические лица, прошедшие регитрацию на ruversity.com.
+            </p>
               
             <p> Обучающие материалы представляются на коммерческой основе или бесплатно в зависимости от условий, определённых Преподавателем.
             </p>
@@ -21,7 +25,7 @@
             <p>
                 Пользователи несут полную ответственность за любой вред, причинённый ruversity.com или третьим лицам в связи с неправомочным использованием их учетных записей.
             </p>
-              Пользователи обязуются не размещать Обучающие материалы, посты, вопросы, ответы или картинки, нарушающие законодательство РФ или оскорбляющие достоинство других пользователей. 
+              Пользователи обязуются не размещать Обучающие материалы, посты, вопросы, ответы или изображения, нарушающие законодательство РФ или оскорбляющие достоинство других пользователей. 
             </p>
             <p>
                 Пользователи несут полную ответственность за любой вред, причинённый ruversity.com или третьим лицам в связи с нарушением условий, описанных в предыдущем параграфе.
@@ -41,13 +45,16 @@
                
             <p>Преподаватель может удалить свою учетную запись в любое время. Однако, Обучающие материалы, созданные им, останутся доступными Слуашателям, которые приобрели данные Обучающие материалы ранее.
             </p>
+            <p>
+                После загрузки Обучающих материалов на сервер Преподаватель утрачивает доступ к ним. Все изменения и дополнения в Обучающие материалы вносятся Преподавателем по предварительно письменной заявке, направленной на 79200711112@yandex.ru
+            </p>
             <h5>3. Слушатели</h5>
-            <p>Ruversity.com предоставляет Слушателям пожизненный доступ к Обучающим материалам на условиях, определяемых совместно Преподавателем, разместившим данный Обучающий материал, и администрацие ruversity.com/
+            <p>Ruversity.com предоставляет Слушателям пожизненный доступ к Обучающим материалам на условиях, определяемых совместно Преподавателем, разместившим данный Обучающий материал, и администрацией ruversity.com.
             </p>
             <p>
                 Слушатель может просматривать Обучающий материал, но не может скачать его на свои компьютер.
             </p>
-            <p>Слушатели используют Обучающие материалы на своий страх и риск. Ruversity.com не несет никакой ответственности за негативные последствия, которые могут наступить в результате использования данных Обучающих материалов.
+            <p>Слушатели используют Обучающие материалы на свой страх и риск. Ruversity.com не несет никакой ответственности за негативные последствия, которые могут наступить в результате использования данных Обучающих материалов.
             <p>Слушатели обязуются не копировать, не продавать, не транслировать, не сдавать в аренду, не передавать на безвозмездной основе и не передавать каким-либо другим способом свое право просмотра приобретенных ими Обучающих материалов за исключением случаев, когда у них есть письменное разрешение от Ruversity.com на выполнение данных действий.
 
             </p>
@@ -66,73 +73,46 @@
             <p>
                 Во всех случаях, описанных в параграфе 4, администрация ruversity.com оставляет за собой право изъять спорные Обучающие материлы из публичного доступа.
             </p>
+            <p>Если по мнению администрации ruversity.com какие-либо Обучающие материалы, посты, вопросы, ответы или изображения не соответствуют законодательству РФ или оскорбляют других пользователей, администрация ruversity.com оставляет за собой право изъять такие Обучающие материалы, посты, вопросы, ответы, изображения из публичного доступа и заблокировать учетную запись пользователя, разместившего такие Обучающие материалы, посты, вопросы, ответы, изображения.
+            </p>
+            <p>До тех пор, пока решением уполномоченных органов не доказано обратное, администрация ruversity.com полагается на собственное суждение в оценке соответствия Обучающих материалов, постов, вопросов, ответов и изображений законодательству РФ и данной политике.
+              
+            </p>
+            <p>Если физическое или юридическое лицо не согласно с позицией администрации ruversity.com в том, что касается оценки Обучающих материалов, постов, вопросов, ответов и изображений, то такое лицо должно самостоятельно предоставить необходимые и достаточные докуазательства своей позиции.
+            </p>
+            <h5>5. Стоимость и оплата.</h5>
+            <p>Ruversity.com самостоятельно определяет ценовую политику.</p>
+            <p>Базовая цена курса устанавливается в размере 1490 руб.</p>
             <p>
-                In case Ruversity.com finds out that some educational content, review, question, answer or image is
-                incompatible with laws & regulations of country of residence of the Instructor or country of residence
-                of Ruversity.com or in case such educational content, review, question, answer or image offends other
-                Users, the portal reserves the right to withdraw such educational content from public access or delete
-                this review, question, answer or image and terminate the account of the User who posted the above
-                content.
+               Преподаватель может размещать Обучающие материалы бесплатно.
             </p>
             <p>
-                While determining if the questionable educational content, reviews, questions, answers or images comply
-                with the present document or local laws & regulations the Ruversity.com relies on its own assessment of
-                the above educational content, reviews, questions, answers or images
+                Преподаватель получает 60% от стоимости курса.
             </p>
             <p>
-                If a person or entity disagrees with the assessment made by the portal it is the duty of this person or
-                entity to provide necessary & sufficient evidence of his opinion.
+                Деньги переводятся по реквизитам, указанным Преподавателем в своем личном кабинете, в течение 10 банковских дней с момента постуления денежных средств на расчетный счет ООО Ритейл. Денежные переводы осуществляются в рублях.
             </p>
-            <h5>5. Pricing & payments.</h5>
-            <p>Ruversity.com is authorized to set prices for educational content as described below.</p>
-            <p>
-                Effective as of 2021/01/01 the base price of a course is 99.99 USD.
-                Effective as of 2021/01/01 the discount prices of a course may fluctuate from 9.99USD to 99.99USD. The
-                final discount price is set by the portal depending on the market conditions at a certain time & place.
-                The Instructor may post his educational content at free access.
+            <h5>6. Ответственность.</h5>
+            <p>Администрация Ruversity.com предпринимает все необходимые меры для обеспечения круглосуточного доступа пользовтелей к сервису. Время недоступности сервиса не должно превышать 1%. 
             </p>
             <p>
-                The Instructor’s share is 60% of the sum received from the Student.
+                Администрация Ruversity.com не несет ответственности, если недоступность сервиса связана с действиями или бездействием третьих лиц.
+            </p>
+            
+            <h5>7. Изменения условий.</h5>
+            <p>Администрация Ruversity.com оставляет за собой право вносить изменения в данные условия в одностороннем порядке.
             </p>
             <p>
-                The money is transferred to the account indicated by the Instructor. As of 2021/01/01 depending on the
-                laws &
-                regulations of the Instructor’s county of residences the money may be transferred to the Instructor’s:
-            <ul>
-                • Paypal account;<br>
-                • Credit or debit card;<br>
-                • Bank account.
-            </ul>
-            Payment is executed within 10 business days since the end of the month in which the corresponding payment
-            was received
-            from the Student.
-            Payments are made in USD. The Instructor bears all risks of currency conversion loss.
+                Изменения вступают в силу с момента их опубликования на ruversity.com.
             </p>
-            <h5>6. Responsibility.</h5>
             <p>
-                Ruversity.com makes every effort to provide Users with full access to the educational content except for
-                site
-                maintenance time.
-                The portal bears no responsibility in case such access is limited of blocked through the fault of third
-                parties.
+                Пользователи самостоятельно следят за изменениями, вносимыми в данные условия. В случае несогласия с данными условиями пользователю следует удалить свою учетную запись на ruversity.com
             </p>
-            <h5>7. Changes to the agreement.</h5>
             <p>
-                Any changes to the present agreement become effective in 30 days after the moment they are published at
-                Ruversity.com.
-                Every time a change to the present agreement is published at Ruversity.com, all the Students &
-                Instructors are notified
-                via emails.
-                The portal bears no responsibility in case the Instructor or the Student fails to receive a
-                corresponding email message
-                due to the fault of third parties.
+                Данная редакция условий вступает в действие 30.08.2022.
             </p>
-            <h5>8. Miscellaneous.</h5>
-            <p>
-                The original document is written in English. Translations to other languages are valid. However, in case
-                of divergence
-                in translations, the English version will prevail.
-            </p>
+           
+          
         </div>
 </div>
 </div>
