--- a/templates/workshop/edit_subject.html
+++ b/templates/workshop/edit_subject.html
@@ -96,7 +96,7 @@
             </div>
             
         <div class="col-3">
-    <a href="{% url 'agreement' subject.id%}">
+    <a href="{% url 'agreement' subject.id%}" style="text-decoration: none">
     <input type="submit" value="Загрузить на сервер" class="btn btn-outline-dark btn-block">
     </a>
         </div>
@@ -201,7 +201,7 @@
 
         <div class="row mt-3">
             <div class="col">
-                <a href="{% url 'delete_subject' subject.id %}">
+                <a href="{% url 'delete_subject' subject.id %}" style="text-decoration: none">
                     <!-- <input type="submit" value="Delete" class="btn btn-info btn-block"> -->
                     <input type="button" value="Удалить курс" class='btn btn-sm btn-block btn-outline-dark'>
                 </a>
