--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -7,7 +7,7 @@
     <div class="col-2 border rounded-pill text-center bg-light p-2 ">
         <a class='nav-link'
             href="{% url 'list_software' %}">Программирование и IT</a></div>
-    <div class="col-1 border rounded-pill text-center bg-light p-2 "><a class='nav-link'
+    <div class="col-2 border rounded-pill text-center bg-light p-2 "><a class='nav-link'
             href="{% url 'list_arts' %}">Искусство</a></div>
     <div class="col-2 border rounded-pill text-center bg-light p-2  "><a class='nav-link'
             href="{% url 'list_fitness' %}">Спорт и фитнесс</a></div>
@@ -15,9 +15,11 @@
             href="{% url 'list_personal' %}">Личностное развитие</a></div>
     <div class="col-2 border rounded-pill text-center bg-light p-2"><a class='nav-link'
             href="{% url 'list_skills' %}">Домашние навыки</a></div>
-    <div class="col-1 border rounded-pill text-center bg-light p-2 "><a class='nav-link'
+    <div class="col-2 border rounded-pill text-center bg-light p-2 "><a class='nav-link'
             href="{% url 'list_buisness' %}" >Бизнес</a></div>
     <div class="col-2 border rounded-pill text-center bg-light p-2 "><a class='nav-link' href="{% url 'list_fundamental' %}">Фундаментальные знания</a></div>
+    <div class="col-2 border rounded-pill text-center bg-light p-2 "><a class='nav-link'
+            href="{% url 'list_languages' %}">Языки</a></div>
 </div>
     
     <div class="row">
