--- a/templates/workshop/create_new_subject.html
+++ b/templates/workshop/create_new_subject.html
@@ -22,7 +22,7 @@
                     <label for="description" >Описание</label>
                 </div>
                 <div class="col">
-                    <textarea class='form-control' id="description" rows='3' minlength='120' maxlength='180' name="description" required placeholder='Please, enter short description from 120 to 180 symbols'></textarea>
+                    <textarea class='form-control' id="description" rows='3' minlength='120' maxlength='180' name="description" required placeholder='Введите краткое описание курса. 120-180 символов.'></textarea>
                 </div>
                
             </div>
@@ -32,7 +32,7 @@
                     <label for="prerequisite">Необходимая подготовка</label>
                 </div>
                 <div class="col">
-                    <textarea class='form-control' rows='3' id="prerequisite" minlength='120'  maxlength='180' minlength='150'name="prerequisite" required></textarea>
+                    <textarea class='form-control' rows='3' id="prerequisite" minlength='120'  maxlength='180' minlength='150'name="prerequisite" required placeholder='Введите требования к предварительной подготовке. 120-180 символов.'></textarea>
                 </div>
         </div>
 
@@ -42,7 +42,8 @@
             </div>
             <div class="col">
                 <p>
-                Load a thumbnail file in jpg, jpeg, png or bmp format. Minimum required dimensions: 750 x 422 pixels. Always keep aspect ratio of 16 by 9. You may use stock images but we recommend you hire a professional web designer to create an image for your thumbnail.
+                Загрузите обложку для вашего курса в формате jpg, jpeg, png или bmp. Минимальный размер изображения 750x422 пикселя. Соотношение сторон 16x9. Вы можете использовать изображения, находящиеся в свободном доступе, но мы рекомедуем заказть обложку у веб дизайнера.
+                <!-- Load a thumbnail file in jpg, jpeg, png or bmp format. Minimum required dimensions: 750 x 422 pixels. Always keep aspect ratio of 16 by 9. You may use stock images but we recommend you hire a professional web designer to create an image for your thumbnail. -->
                 </p>
                 <input type="file" id="thumbnail_file" class='form-control' name="thumbnail_file" required><br>
             </div>
