--- a/templates/workshop/edit_subject.html
+++ b/templates/workshop/edit_subject.html
@@ -181,10 +181,10 @@
             </div>
             <div class="form-group">
                 <label for="description">Редактировать краткое описание курса</label>
-                <textarea class='form-control' id="description" rows='3' minlength='120' maxlength='180' name="description" required placeholder='Введите краткое описание курса. 120-180 слов.'></textarea>
+                <textarea class='form-control' id="description" rows='3' minlength='120' maxlength='180' name="description" required placeholder='Введите краткое описание курса. 120-180 символов.'></textarea>
             <div class="form-group">
                 <label for="prerequisites">Редактировать предварительную подготовку</label>
-                <textarea class='form-control' rows='3' id="prerequisite" minlength='120' maxlength='180' minlength='150'name="prerequisites" required placeholder='Введите требования к предварительной подготовке. 120-180 слов.'></textarea>
+                <textarea class='form-control' rows='3' id="prerequisite" minlength='120' maxlength='180' minlength='150'name="prerequisites" required placeholder='Введите требования к предварительной подготовке. 120-180 символов.'></textarea>
             <div>
             <div class="form-group">
                 <label for="thumbnail">Загрузить новую картинку для курса:</label>
