edited author page

--- a/templates/workshop/studio.html
+++ b/templates/workshop/studio.html
@@ -39,7 +39,7 @@
             <div class="col-8">
                 <!-- <input type="submit" value="Create" class="btn btn-info btn-block"> -->
                 <!-- <button type='submit'>Load</button><br> -->
-                <input type="submit" value="Submit" class="btn btn btn-block btn-outline-dark">
+                <input type="submit" value="Сохранить" class="btn btn btn-block btn-outline-dark">
             </div>
             </div>
             </form>
