--- a/templates/workshop/studio.html
+++ b/templates/workshop/studio.html
@@ -83,15 +83,16 @@
                                             <p class="title is-6" style="height:10px">{{subject.title}}</p>
                                         </div> -->
                         <div class="row">
-                            <div class="col"><strong>Created by: </strong>{{subject.author}}</div>
+                            <div class="col"><strong>Автор: </strong>{{subject.author}}</div>
                         </div>
                         <div class="row">
-                            <div class="col"><strong>Date posted: </strong>{{subject.date_posted}}</div>
+                            <div class="col"><strong>Дата создания:
+                                <br> </strong>{{subject.date_posted}}</div>
                         </div>
                     <div class="row">
                         <div class="col">
                             <strong>
-                                Rating:
+                                Рейтинг:
                             </strong> {{subject.av_rating}}
                             <div class="stars-outer">
                                 <div class="stars-inner" style="width: {{subject.percent}}"></div>
@@ -101,7 +102,7 @@
 
                     <div class="row">
                         <div class="col">
-                            <strong>Transactions:</strong> {{subject.transactions}}
+                            <strong>Покупки:</strong> {{subject.transactions}}
                         </div>
                     </div>
 
@@ -136,15 +137,15 @@
                                                 <p class="title is-6" style="height:10px">{{subject.title}}</p>
                                             </div> -->
                     <div class="row">
-                        <div class="col"><strong>Created by: </strong>{{subject.author}}</div>
+                        <div class="col"><strong>Автор: </strong>{{subject.author}}</div>
                     </div>
                     <div class="row">
-                        <div class="col"><strong>Date posted: </strong>{{subject.date_posted}}</div>
+                        <div class="col"><strong>Дата размещения: <br></strong>{{subject.date_posted}}</div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <strong>
-                                Rating:
+                                Рейтинг:
                             </strong> {{subject.av_rating}}
                             <div class="stars-outer">
                                 <div class="stars-inner" style="width: {{subject.percent}}"></div>
@@ -154,7 +155,7 @@
     
                     <div class="row">
                         <div class="col">
-                            <strong>Transactions:</strong> {{subject.transactions}}
+                            <strong>Покупки:</strong> {{subject.transactions}}
                         </div>
                     </div>
     
