--- a/templates/workshop/studio.html
+++ b/templates/workshop/studio.html
@@ -120,7 +120,7 @@
         {% if subject.ready == True %}
     
         <div class="col-sm-3">
-            <div class="card mb-3" style="border-color: transparent;">
+            <div class="card img_scale mb-3" style="border-color: transparent;">
                 <div class="card-header" style='height:4rem'>
                     <h5>{{subject.title}}</h5>
                 </div>
